[project]
name = "bazpy"
version = "0.1.0"
description = "Async API client for Hypixel Skyblock Bazaar data"
authors = [
    {name = "JaegyuDev", email = "jaegyu@jaegyu.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
